test/FAIL/dispcmd/memory_match/01_test_disp.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="no file loaded"
#-------

disp mem 0x1000+3
